--- a/src/layouts/Navbar.module.css
+++ b/src/layouts/Navbar.module.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap'); */
 .navbar {
-    background-color: #2f09a1;
+    background-color: #220a6a;
     height: auto;
     overflow: auto;
     margin: 0;
@@ -12,5 +12,5 @@
     font-size: 36px;
     font-weight: 700;
     /* font-family: 'Indie Flower', cursive; */
-    color: #0fdb08;
+    color:  #d75490;
 }
